# wcsh

./: CMakeLists.txt  TODO.txt
src/: wcsh.cxx
src/core/: prompt.cxx  prompt.h  sh_exec.cxx  sh_intern.cxx  shell_line.cxx  shell_line.h  utility.cxx  utility.h
src/format/: expr.cxx  expr.h  format.cxx  format.h  format_utils_builtin.cxx  format_utils_builtin.h
src/func/: cond.h  eval_cond.cxx  if.cxx
src/util/: builtin.cxx  builtin.h
src/var/: alias.cxx  alias.h  var.cxx  var.h
